# NumericClientServerApp

./: .gitignore  CMakeLists.txt
etc/: NumericClient.conf  NumericServer.conf
src/NumericClient/: CMakeLists.txt
src/NumericClient/src/: client.cpp  client.h  client_structs.h  main.cpp  manager.cpp  manager.h
src/NumericServer/: CMakeLists.txt
src/NumericServer/src/: main.cpp  server.cpp  server.h  server_structs.h  tcp_conn.cpp  tcp_conn.h  tcp_conn.hpp
src/common/: CMakeLists.txt
src/common/ConfigParser/: config_parser.cpp  config_parser.h
src/common/SimpleLogger/: CMakeLists.txt  simple_logger.cpp  simple_logger.h
